--- a/style.css
+++ b/style.css
@@ -12,9 +12,11 @@ body{
     background-image: url(./image/background.png);
     background-repeat: no-repeat;
    background-size: cover;
+   font-family: 'Marvel', sans-serif;
+  
 }
 .description__text{
-    font-size:  20px;
+    font-size:  25px;
     width: 500px;
     color: white;
 }
@@ -26,6 +28,11 @@ header{
    grid-gap: 50px;
    display: flex;
 }
+main{
+    display: grid;
+    grid-template-columns: 1fr  100%;
+    padding-right: 20px;
+}
 
 footer{
     gap: 40px;
@@ -33,11 +40,19 @@ footer{
     align-items: end;
 }
 
-
 .logo{
     position: relative;
     place-self: start start;
+
+}
+
+ .aplicativos{
+     gap: 40px;
+     display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    padding-inline-start: 4900%;
 }
 
 
-    
+
